--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -50,7 +50,6 @@ body.admin-interface::before {
 #page-wrapper {
   & > .container-fluid {
     padding: 0;
-    margin-top: -5px;
   }
 }
 
